# ringline

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/skills/pr/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  fuzz.yml  release.yml  tag-release.yml
docs/: recv-buffer-adaptive-design.md  recv-buffer-adaptive-plan.md  segmented-recv-design.md  send-completion-design.md
docs/journal/: 2026-02-bootstrap.md  2026-03-hardening-blitz.md  2026-04-mio-backend.md  2026-04-udp-quic-h3.md  2026-05-benchmarks.md  2026-05-conformance-audit.md  2026-06-api-simplification.md  2026-06-perf-audit.md  2026-07-correctness-audit.md  2026-07-enobufs-fallback-recv.md  2026-07-fuzzing.md  2026-07-self-adaptive-recv-buffering.md  README.md
docs/superpowers/plans/: 2026-05-26-tcp-systemslab-experiments.md
experiments/: forge-tcp-worker-scaling.toml  single-machine-full.toml  tcp-chunk-size-sweep.toml  tcp-chunk-sweep.toml  tcp-client-compare.toml  tcp-client-diag.toml  tcp-closed-loop.toml  tcp-fanin-audit-ab.toml  tcp-large-msg.toml  tcp-latency-throughput.toml  tcp-open-loop.toml  tcp-overnight.toml  tcp-physical-cores.toml  tcp-single-machine.toml  tcp-single-worker.toml  tcp-sweep.toml  tcp-tokio-server-fix.toml  tcp-worker-scaling.toml  tcp-ws-fanin-decomp.toml  tcp-ws-open-decomp.toml  tcp-ws-pcap-client.toml  tcp-ws-pcap-fanin.toml
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/h2_frame/: ping.seed
fuzz/corpus/h2_hpack/: indexed_plus_literal.seed
fuzz/corpus/h3_frame/: headers_frame.seed
fuzz/corpus/h3_qpack/: indexed_static.seed
fuzz/corpus/http1_response/: chunk_with_trailer.seed  chunked.seed  content_length.seed
fuzz/fuzz_targets/: grpc_connection.rs  grpc_message.rs  h2_connection.rs  h2_frame.rs  h2_hpack.rs  h3_frame.rs  h3_qpack.rs  http1_response.rs
ketama/: Cargo.toml
ketama/src/: lib.rs  md5.rs
protocol-memcache/: Cargo.toml
protocol-memcache/src/: command.rs  error.rs  lib.rs  request.rs  response.rs  streaming.rs
protocol-memcache/src/binary/: command.rs  mod.rs  (+4 more)
protocol-resp/: Cargo.toml
protocol-resp/src/: cluster.rs  command.rs  error.rs  lib.rs  request.rs  streaming.rs  value.rs
ringline/: Cargo.toml  README.md  ROADMAP.md  build.rs
ringline-bench/: Cargo.toml
ringline-bench/src/: client.rs  lib.rs  main.rs  output.rs  stats.rs
ringline-bench/src/servers/: mod.rs  ringline_echo.rs  tokio_echo.rs
ringline-benchmarks/: Cargo.toml
ringline-benchmarks/src/: bench.rs  client.rs  lib.rs  main.rs  output.rs  port_manager.rs  runner.rs  server.rs  stats.rs
ringline-benchmarks/src/protocols/: grpc.rs  http1.rs  http2.rs  http3.rs  memcache.rs  mod.rs  momento.rs  quic.rs  redis.rs  tcp.rs  udp.rs
ringline-benchmarks/src/transports/: mio.rs  mod.rs  uring.rs
ringline-grpc/: Cargo.toml  README.md
ringline-grpc/src/: compress.rs  connection.rs  error.rs  lib.rs  message.rs
ringline-grpc/tests/: round_trip.rs
ringline-h2/: Cargo.toml  README.md
ringline-h2/benches/: h2_bench.rs
ringline-h2/src/: connection.rs  error.rs  flowcontrol.rs  frame.rs  hpack.rs  huffman.rs  lib.rs  settings.rs  stream.rs
ringline-h2/tests/: public_servers.rs  round_trip.rs
ringline-h3/: Cargo.toml  README.md
ringline-h3/src/: connection.rs  error.rs  frame.rs  huffman.rs  lib.rs  qpack.rs  settings.rs  stream.rs
ringline-h3/tests/: backpressure.rs  public_servers.rs  round_trip.rs  stream_finished.rs  stream_lifecycle.rs
ringline-http/: Cargo.toml  README.md  build.rs
ringline-http/examples/: http_get.rs
ringline-http/src/: body.rs  client.rs  compress.rs  error.rs  h1_conn.rs  h2_conn.rs  lib.rs  pool.rs  request.rs  response.rs  streaming.rs
ringline-http/tests/: public_servers.rs
ringline-memcache/: Cargo.toml  README.md  build.rs
ringline-memcache/src/: instrumented.rs  lib.rs  pool.rs  sharded.rs
ringline-memcache/tests/: integration.rs  streaming.rs
ringline-momento/: Cargo.toml  README.md
ringline-momento/src/: credential.rs  error.rs  lib.rs  pool.rs  proto.rs
ringline-momento/tests/: integration.rs
ringline-ping/: Cargo.toml  README.md
ringline-ping/src/: instrumented.rs  lib.rs  pool.rs
ringline-ping/tests/: round_trip.rs
ringline-quic/: Cargo.toml  README.md
ringline-quic/src/: config.rs  endpoint.rs  error.rs  event.rs  lib.rs
ringline-quic/tests/: echo.rs  peer.rs  stream_events.rs
ringline-redis/: Cargo.toml  README.md  build.rs
ringline-redis/benches/: resp_bench.rs
ringline-redis/examples/: redis_get_set.rs
ringline-redis/src/: cluster.rs  instrumented.rs  lib.rs  pool.rs  sharded.rs
ringline-redis/tests/: integration.rs  parse_error.rs  recv_cap.rs  recv_meta.rs  streaming.rs
ringline/benches/: accumulator.rs  buffer.rs  connect.rs  echo.rs  timer.rs
ringline/examples/: connect_echo.rs  echo_async_server.rs  echo_bench.rs  echo_client.rs  echo_stream_server.rs  echo_tls_server.rs  nvme_smoke.rs  ring_fill_bench.rs
ringline/src/: acceptor.rs  accumulator.rs  async_event_loop.rs  blocking.rs  chain.rs  completion.rs  config.rs  connection.rs  counter.rs  direct_io.rs  disk_io_pool.rs  driver.rs  error.rs  fs.rs  guard.rs  handler.rs  lib.rs  metrics.rs  nvme.rs  process.rs  region_registry.rs  resolver.rs  ring.rs  signal.rs  spawner.rs  tls.rs  topology.rs  wakeup.rs  worker.rs
ringline/src/backend/: mod.rs  sockaddr.rs  udp_gro.rs
ringline/src/backend/mio/: driver.rs  event_loop.rs  mod.rs
ringline/src/backend/uring/: driver.rs  event_loop.rs  mod.rs  provided.rs  ring.rs
ringline/src/buffer/: fixed.rs  mod.rs  provided.rs  send_copy.rs  send_slab.rs
ringline/src/recv/: domain.rs  mod.rs  occupancy.rs  provider.rs  sizing.rs
ringline/src/runtime/: cancellation.rs  channel.rs  handler.rs  io.rs  join.rs  mod.rs  select.rs  stream.rs  task.rs  waker.rs
ringline/tests/: blocking.rs  direct_io.rs  echo.rs  fs.rs  guard_send_threshold.rs  handler_callbacks.rs  mio_adaptive_recv_scratch.rs  process.rs  region_registry.rs  shutdown_drop.rs  stream_echo.rs  throughput.rs  tls_echo.rs  udp.rs
(+1 files in other folders)
