[workspace]
resolver = "2"
members = [
    "ringline",
    "ketama",
    "ringline-redis",
    "ringline-memcache",
    "ringline-quic",
    "ringline-h3",
]

[workspace.package]
authors = ["Brian Martin <brayniac@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brayniac/ringline"

[workspace.dependencies]
# Internal crates
ringline = { path = "ringline", features = ["tls"] }
resp-proto = "0.0.1"
memcache-proto = "0.0.1"
ketama = { path = "ketama" }

# External dependencies
bytes = "1.11.1"
itoa = "1.0"
memchr = "2.7"
ryu = "1.0"
thiserror = "2"
quinn-proto = { version = "0.11", default-features = false, features = ["rustls-ring"] }
rustls = { version = "0.23", default-features = false }
slab = "0.4"
rcgen = "0.13"
rustls-pki-types = "1"
webpki-roots = "0.26"
