[workspace]
resolver = "2"
members = [
    "ringline",
    "ringline-redis",
    "ringline-memcache",
    "ringline-quic",
    "ringline-h3",
    "ringline-h2",
    "ringline-ping",
    "ringline-momento",
    "ringline-grpc",
]

[workspace.package]
authors = ["Brian Martin <brayniac@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brayniac/ringline"

[workspace.dependencies]
# Internal crates
ringline = { path = "ringline" }
resp-proto = "0.0.1"
memcache-proto = "0.0.1"
ping-proto = "0.0.1"
ketama = "0.0.1"

# External dependencies
bytes = "1.11.1"
histogram = "0.11"
itoa = "1.0"
memchr = "2.7"
ryu = "1.0"
libc = "0.2"
thiserror = "2"
quinn-proto = { version = "0.11", default-features = false, features = ["rustls-ring"] }
rustls = { version = "0.23", default-features = false }
slab = "0.4"
rcgen = "0.13"
rustls-pki-types = "1"
webpki-roots = "0.26"
