[workspace]
resolver = "2"
members = [
    "ringline",
    "ringline-redis",
    "ringline-memcache",
    "ringline-quic",
    "ringline-h3",
    "ringline-h2",
    "ringline-ping",
    "ringline-grpc",
    "ringline-http",
    "ringline-bench",
    "ringline-benchmarks",
]

[workspace.package]
authors = ["Brian Martin <brayniac@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brayniac/ringline"

[workspace.dependencies]
# Internal crates
ringline = { path = "ringline", version = "0.3" }
ringline-quic = { path = "ringline-quic" }
ringline-http = { path = "ringline-http" }
ringline-h2 = { path = "ringline-h2" }
ringline-h3 = { path = "ringline-h3" }
ringline-redis = { path = "ringline-redis" }
ringline-memcache = { path = "ringline-memcache" }
ringline-grpc = { path = "ringline-grpc" }
ringline-ping = { path = "ringline-ping" }
resp-proto = "0.0.1"
memcache-proto = "0.0.2"
ping-proto = "0.0.1"
ketama = "0.0.1"

# External dependencies
bytes = "1.11.1"
histogram = "0.11"
itoa = "1"
libc = "0.2"
thiserror = "2"
# quinn-proto >= 0.11.14 to pull rustls >= 0.23.18 (RUSTSEC-2024-0399
# fragmented-ClientHello panic) and ring >= 0.17.12 (RUSTSEC-2025-0009
# AES panic). Downstream consumers respect this min-version pin even
# though the lockfile may resolve higher.
quinn-proto = { version = "0.11.14", default-features = false, features = ["rustls-ring"] }
# rustls >= 0.23.18 patches RUSTSEC-2024-0399 (Acceptor::accept panic on
# fragmented ClientHello, CVE-2024-11738) and is also past
# RUSTSEC-2024-0336 (complete_io infinite loop). Pin to the patched
# baseline so downstream resolvers can't accidentally land on a
# vulnerable 0.23.x.
rustls = { version = "0.23.18", default-features = false }
slab = "0.4"
rcgen = "0.13"
rustls-pki-types = "1"
webpki-roots = "0.26"
