[package]
name = "protocol-resp"
version = "0.3.8"
edition.workspace = true
license.workspace = true

[features]
default = []
resp3 = ["dep:ryu"]

[dependencies]
bytes = { workspace = true }
memchr = { workspace = true }
itoa = { workspace = true }
ryu = { workspace = true, optional = true }
thiserror = { workspace = true }
