[package]
name = "ringline-bench"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ringline-bench"
path = "src/main.rs"

[[bin]]
name = "bench-server"
path = "src/bin/server.rs"

[[bin]]
name = "bench-client"
path = "src/bin/client.rs"

[dependencies]
ringline = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = { workspace = true }
clap = { version = "4", features = ["derive"] }
