[package]
name = "ringline-benchmarks"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ringline-benchmarks"
path = "src/main.rs"

[dependencies]
ringline = { workspace = true }
ringline-quic = { workspace = true }
ringline-http = { workspace = true }
ringline-h2 = { workspace = true }
ringline-h3 = { workspace = true }
ringline-redis = { workspace = true }
ringline-memcache = { workspace = true }
ringline-momento = { workspace = true }
ringline-grpc = { workspace = true }
ringline-ping = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
# Reference HTTP client for the HTTP/1.1 and HTTP/2 benches — used
# so the "ringline vs tokio" cell measures `ringline_http::HttpClient`
# against a realistic tokio HTTP client (request builder + structured
# response parsing) rather than a hand-rolled fastest-possible byte
# loop. `rustls-tls` lets reqwest trust the bench's self-signed cert
# via `add_root_certificate` without pulling in native-tls.
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
# HTTP/2 needs a real h2 server. The bench server is hyper +
# tokio-rustls + a self-signed cert generated at startup — same
# pattern as `ringline-h2/tests/round_trip.rs`.
hyper = { version = "1", features = ["server", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
http-body-util = "0.1"
quinn-proto = { workspace = true }
# The QUIC bench's tokio reference client is built on `quinn` — the
# tokio-friendly wrapper around `quinn-proto`. ringline-benchmarks
# only needs the runtime side; rustls comes from the workspace.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
# `ring` crypto provider is what tokio-rustls's `ring` feature
# selects; matching it here lets `ServerConfig::builder()` find a
# default provider without explicit `install_default()`.
rustls = { workspace = true, features = ["ring", "std", "tls12"] }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
bytes = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = { workspace = true }
crossbeam-channel = "0.5"
