[package]
name = "ringline-grpc"
version = "0.2.0"
edition = "2024"
description = "Sans-IO gRPC client framing layer"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
gzip = ["dep:flate2"]
zstd = ["dep:zstd"]
compression = ["gzip", "zstd"]

[dependencies]
ringline-h2 = { path = "../ringline-h2", version = "0.2.0" }
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true, default-features = false }

[dev-dependencies]
ringline = { workspace = true }
rustls = { workspace = true, features = ["ring", "std", "tls12"] }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
