[package]
name = "ringline-h3"
version = "0.1.3"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sans-IO HTTP/3 client framing layer"

[dependencies]
bytes = { workspace = true }
ringline-quic = { path = "../ringline-quic", version = "0.1.3" }

[dev-dependencies]
ringline = { workspace = true }
quinn-proto = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["std", "ring"] }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
