[package]
name = "ringline-http"
version = "0.5.0"
edition = "2024"
description = "Async HTTP/1.1 and HTTP/2 client for the ringline io_uring runtime"
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
gzip = ["dep:flate2"]
zstd = ["dep:zstd"]
brotli = ["dep:brotli"]
compression = ["gzip", "zstd", "brotli"]
# Exposes doc(hidden) entry points into the crate-private HTTP/1.1 parsers
# for the fuzz harness in ../fuzz. Never enable outside fuzzing.
fuzzing = []

[dependencies]
bytes = { workspace = true }
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true, default-features = false }
brotli = { version = "7", optional = true }
ringline = { workspace = true }
ringline-h2 = { path = "../ringline-h2", version = "0.5.0" }
thiserror = { workspace = true }

[dev-dependencies]
rustls = { workspace = true }
webpki-roots = { workspace = true }
