[package]
name = "ringline-http"
version = "0.5.2"
edition = "2024"
description = "Async HTTP/1.1 and HTTP/2 client for the ringline io_uring runtime"
authors.workspace = true
license.workspace = true
repository.workspace = true

# `has_io_uring` is emitted by this crate's build.rs to gate the io_uring-only
# zero-copy recv path (the HTTP/2 pump feeds the h2 codec via
# `ConnCtx::with_segments`). Register it for check-cfg so the cfg is recognized
# on backends/targets where build.rs does not emit it (mio, macOS), matching
# `ringline`'s own stanza.
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(has_io_uring)"]

[features]
gzip = ["dep:flate2"]
zstd = ["dep:zstd"]
brotli = ["dep:brotli"]
compression = ["gzip", "zstd", "brotli"]
# Forward the runtime's mio-backend override. Needed so this crate's build.rs
# sees `CARGO_FEATURE_FORCE_MIO` and gates the io_uring-only segmented recv path
# out in lockstep with `ringline` being built as mio — otherwise a workspace
# `--features force-mio` build (CI clippy-mio) would compile `with_segments`
# against a mio `ringline` that lacks it.
force-mio = ["ringline/force-mio"]

[dependencies]
bytes = { workspace = true }
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true, default-features = false }
brotli = { version = "7", optional = true }
ringline = { workspace = true }
ringline-h2 = { path = "../ringline-h2", version = "0.5.2" }
thiserror = { workspace = true }

[dev-dependencies]
rustls = { workspace = true }
webpki-roots = { workspace = true }
