[package]
name = "ringline-memcache"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:histogram"]
timestamps = ["ringline/timestamps", "dep:libc"]

[dependencies]
bytes = { workspace = true }
histogram = { workspace = true, optional = true }
ketama = { workspace = true }
libc = { workspace = true, optional = true }
ringline = { workspace = true }
memcache-proto = { workspace = true }
thiserror = { workspace = true }
