[package]
name = "ringline-memcache"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Memcache client for the ringline io_uring runtime"

[features]
default = ["metrics"]
metrics = ["dep:histogram"]
timestamps = ["ringline/timestamps", "dep:libc"]

[dependencies]
bytes = { workspace = true }
histogram = { workspace = true, optional = true }
itoa = { workspace = true }
ketama = { workspace = true }
libc = { workspace = true, optional = true }
ringline = { workspace = true }
memcache-proto = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ringline = { workspace = true, features = ["testing"] }
