[package]
name = "ringline-momento"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Momento cache client for the ringline io_uring runtime"

[features]
default = ["metrics"]
metrics = ["dep:histogram"]
timestamps = ["ringline/timestamps", "dep:libc"]

[dependencies]
bytes = { workspace = true }
histogram = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
ringline = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rustls = { workspace = true }
serial_test = "3"
webpki-roots = { workspace = true }
