[package]
name = "ringline-ping"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:histogram"]

[dependencies]
histogram = { workspace = true, optional = true }
ringline = { workspace = true }
ping-proto = { workspace = true }
thiserror = { workspace = true }
