[package]
name = "ringline-ping"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PING/PONG client for the ringline io_uring runtime"

[features]
default = ["io-uring", "metrics"]
io-uring = ["ringline/io-uring"]
metrics = ["dep:histogram"]
timestamps = ["ringline/timestamps", "dep:libc"]

[dependencies]
histogram = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
ringline = { workspace = true }
ping-proto = { workspace = true }
thiserror = { workspace = true }
