[package]
name = "ringline-quic"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
quinn-proto = { workspace = true }
rustls = { workspace = true, features = ["std", "ring"] }
slab = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ringline = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
