[package]
name = "ringline-quic"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "QUIC transport layer wrapping quinn-proto for ringline"

[dependencies]
bytes = { workspace = true }
quinn-proto = { workspace = true }
rustls = { workspace = true, features = ["std", "ring"] }
slab = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ringline = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
