[package]
name = "ringline-redis"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis (RESP) client for the ringline io_uring runtime"

[features]
default = ["metrics"]
metrics = ["dep:histogram"]
timestamps = ["ringline/timestamps", "dep:libc"]

[dependencies]
bytes = { workspace = true }
histogram = { workspace = true, optional = true }
ketama = { workspace = true }
libc = { workspace = true, optional = true }
ringline = { workspace = true }
resp-proto = { workspace = true }
thiserror = { workspace = true }
