[package]
name = "ringline-redis"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis (RESP) client for the ringline io_uring runtime"

[features]
default = ["io-uring", "metrics"]
io-uring = ["ringline/io-uring"]
metrics = ["dep:histogram"]
timestamps = ["ringline/timestamps", "dep:libc"]

[dependencies]
bytes = { workspace = true }
histogram = { workspace = true, optional = true }
ketama = { workspace = true }
libc = { workspace = true, optional = true }
ringline = { workspace = true, default-features = false }
resp-proto = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "resp_bench"
harness = false
