[package]
name = "ringline"
version = "0.0.6-alpha.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Async I/O runtime with io_uring (Linux) and mio (cross-platform) backends"
readme = "README.md"
keywords = ["io-uring", "async", "networking", "event-loop"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["io-uring", "futures-io"]
io-uring = ["dep:io-uring"]
timestamps = []
futures-io = ["dep:futures-io"]

[dependencies]
futures-io = { version = "0.3", optional = true }
bytes = "1"
crossbeam-channel = "0.5"
io-uring = { version = "0.7", optional = true }
libc = "0.2"
mio = { version = "1", features = ["os-poll", "net"] }
metriken = "0.7"
pin-project-lite = "0.2"
thiserror = "2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }

[dev-dependencies]
futures-io = "0.3"
futures-util = { version = "0.3", features = ["io"] }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["ring", "std", "tls12"] }
rustls-pki-types = { workspace = true }
proptest = "1"
