[package]
name = "ringline"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Async I/O runtime with io_uring (Linux) and mio (cross-platform) backends"
readme = "README.md"
keywords = ["io-uring", "async", "networking", "event-loop"]
categories = ["asynchronous", "network-programming"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(has_io_uring)"]

[features]
force-mio = []
timestamps = []

[dependencies]
futures-io = "0.3"
bytes = "1"
crossbeam-channel = "0.5"
libc = "0.2"
mio = { version = "1", features = ["os-poll", "net", "os-ext"] }
metriken = "0.9"
pin-project-lite = "0.2"
thiserror = "2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
bytes = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
futures-io = "0.3"
futures-util = { version = "0.3", features = ["io"] }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["ring", "std", "tls12"] }
rustls-pki-types = { workspace = true }
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }

[[bench]]
name = "buffer"
harness = false
path = "benches/buffer.rs"

[[bench]]
name = "connect"
harness = false
path = "benches/connect.rs"

[[bench]]
name = "echo"
harness = false
path = "benches/echo.rs"

[[bench]]
name = "timer"
harness = false
path = "benches/timer.rs"
